[gd_scene load_steps=8 format=3 uid="uid://c8wl51gue5ps3"]

[ext_resource type="Script" uid="uid://cwgu3ewfahq8d" path="res://ui/admin_ui_root.gd" id="1_sfv4s"]
[ext_resource type="PackedScene" uid="uid://drcokpawtdag" path="res://ui/waypoint_connection_editor_control.tscn" id="2_t38xn"]
[ext_resource type="Script" uid="uid://owfvj1a4gkwy" path="res://ui/waypoint_connections_editors_v_box_container.gd" id="2_wns07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mpdg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6j0da"]
bg_color = Color(0, 0, 0, 0.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cgbs0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_carlm"]
bg_color = Color(0.733333, 0.733333, 0.733333, 1)

[node name="AdminUIRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_sfv4s")

[node name="InformationPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.3
anchor_bottom = 0.7
theme_override_styles/panel = SubResource("StyleBoxFlat_0mpdg")

[node name="ScrollContainer" type="ScrollContainer" parent="InformationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextEditVBoxContainer" type="VBoxContainer" parent="InformationPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StructureTypeLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
layout_mode = 2
text = "Base Map"

[node name="IDHBoxContainer" type="HBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
layout_mode = 2

[node name="IDLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/IDHBoxContainer"]
layout_mode = 2
text = "ID: "

[node name="IDLineEdit" type="LineEdit" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/IDHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="LocationHBoxContainer" type="HBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
layout_mode = 2

[node name="LongitudeVBoxContainer" type="VBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/LocationHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LongitudeLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/LocationHBoxContainer/LongitudeVBoxContainer"]
layout_mode = 2
text = "Longitude: "

[node name="LongitudeLineEdit" type="LineEdit" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/LocationHBoxContainer/LongitudeVBoxContainer"]
layout_mode = 2
editable = false

[node name="LatitudeVBoxContainer" type="VBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/LocationHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LatitudeLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/LocationHBoxContainer/LatitudeVBoxContainer"]
layout_mode = 2
text = "Latitude: "

[node name="LatitudeLineEdit" type="LineEdit" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/LocationHBoxContainer/LatitudeVBoxContainer"]
layout_mode = 2
editable = false

[node name="NameHBoxContainer" type="HBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2

[node name="NameLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/NameHBoxContainer"]
layout_mode = 2
text = "Name: "

[node name="NameLineEdit" type="LineEdit" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/NameHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="DescriptionVBoxContainer" type="VBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/DescriptionVBoxContainer"]
layout_mode = 2
text = "Description: "

[node name="DescriptionTextEdit" type="TextEdit" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/DescriptionVBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
editable = false
wrap_mode = 1

[node name="BuildingLetterHBoxContainer" type="HBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2

[node name="BuildingLetterLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/BuildingLetterHBoxContainer"]
layout_mode = 2
text = "Building Letter: "

[node name="BuildingLetterLineEdit" type="LineEdit" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/BuildingLetterHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="LecturersVBoxContainer" type="VBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2

[node name="LecturersLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/LecturersVBoxContainer"]
layout_mode = 2
text = "Lecturers: "

[node name="LecturersLineEdit" type="LineEdit" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/LecturersVBoxContainer"]
layout_mode = 2
editable = false

[node name="FloorNumberHBoxContainer" type="HBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2

[node name="FloorNumberLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/FloorNumberHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Floor Number: "

[node name="FloorNumberSpinBox" type="SpinBox" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/FloorNumberHBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 3.0
value = 1.0
editable = false

[node name="ParentHBoxContainer" type="HBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2

[node name="ParentLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/ParentHBoxContainer"]
layout_mode = 2
text = "Parent:"

[node name="ParenLineEdit" type="LineEdit" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/ParentHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="WaypointConnectionsScrollContainer" type="ScrollContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="WaypointConnectionsVBoxContainer" type="VBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/WaypointConnectionsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WaypointConnectionsLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/WaypointConnectionsScrollContainer/WaypointConnectionsVBoxContainer"]
layout_mode = 2
text = "Waypoint Connections IDs: "

[node name="WaypointConnectionsEditorsVBoxContainer" type="VBoxContainer" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer/WaypointConnectionsScrollContainer/WaypointConnectionsVBoxContainer"]
layout_mode = 2
script = ExtResource("2_wns07")
waypoint_connection_editor_scene = ExtResource("2_t38xn")

[node name="WaypointsUpdatedTimeLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2
text = "Waypoints Updated Time: "
autowrap_mode = 2

[node name="BuildingsUpdatedTimeLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2
text = "Buildings Updated Time: "
autowrap_mode = 2

[node name="RoomsUpdatedTimeLabel" type="Label" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2
text = "Rooms Updated Time: "
autowrap_mode = 2

[node name="ButtonPusherControl" type="Control" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
layout_mode = 2
disabled = true
text = "Save"

[node name="DeleteButton" type="Button" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
layout_mode = 2
disabled = true
text = "Delete"

[node name="AddButton" type="Button" parent="InformationPanel/ScrollContainer/TextEditVBoxContainer"]
layout_mode = 2
disabled = true
text = "Add New Structure"

[node name="DeletionConfirmationPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6j0da")

[node name="Panel" type="Panel" parent="DeletionConfirmationPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -35.0
offset_right = 140.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DeletionConfirmationPanel/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ConfirmationLabel" type="Label" parent="DeletionConfirmationPanel/Panel/VBoxContainer"]
layout_mode = 2
text = "Confirm deletion of the selected?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DeletionConfirmationPanel/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DeleteButton" type="Button" parent="DeletionConfirmationPanel/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Delete"

[node name="DeleteCancelButton" type="Button" parent="DeletionConfirmationPanel/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="AddStructurePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6j0da")

[node name="Panel" type="Panel" parent="AddStructurePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -60.0
offset_right = 110.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cgbs0")

[node name="VBoxContainer" type="VBoxContainer" parent="AddStructurePanel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -68.0
offset_right = 100.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BuildingButton" type="Button" parent="AddStructurePanel/Panel/VBoxContainer"]
layout_mode = 2
text = "Add Building"

[node name="RoomButton" type="Button" parent="AddStructurePanel/Panel/VBoxContainer"]
layout_mode = 2
text = "Add Room"

[node name="WaypointButton" type="Button" parent="AddStructurePanel/Panel/VBoxContainer"]
layout_mode = 2
text = "Add Waypoint"

[node name="AddStructureCancelButton" type="Button" parent="AddStructurePanel/Panel/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="InputMessagePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6j0da")

[node name="Panel" type="Panel" parent="InputMessagePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -60.0
offset_right = 135.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cgbs0")

[node name="VBoxContainer" type="VBoxContainer" parent="InputMessagePanel/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -60.0
offset_right = 125.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InputMessageLabel" type="Label" parent="InputMessagePanel/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="CloseButton" type="Button" parent="InputMessagePanel/Panel/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="LoginPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_carlm")

[node name="EmailLineEdit" type="LineEdit" parent="LoginPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Email"
caret_blink = true

[node name="PasswordLineEdit" type="LineEdit" parent="LoginPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Password"
caret_blink = true
secret = true

[node name="LoginButton" type="Button" parent="LoginPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 80.0
offset_right = -25.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "Login"

[node name="CancelButton" type="Button" parent="LoginPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
text = "Cancel"

[connection signal="add_connection_waypoint_id" from="InformationPanel/ScrollContainer/TextEditVBoxContainer/WaypointConnectionsScrollContainer/WaypointConnectionsVBoxContainer/WaypointConnectionsEditorsVBoxContainer" to="." method="_on_waypoint_connections_editors_v_box_container_add_connection_waypoint_id"]
[connection signal="delete_connection_waypoint_id" from="InformationPanel/ScrollContainer/TextEditVBoxContainer/WaypointConnectionsScrollContainer/WaypointConnectionsVBoxContainer/WaypointConnectionsEditorsVBoxContainer" to="." method="_on_waypoint_connections_editors_v_box_container_delete_connection_waypoint_id"]
[connection signal="update_connection_feature" from="InformationPanel/ScrollContainer/TextEditVBoxContainer/WaypointConnectionsScrollContainer/WaypointConnectionsVBoxContainer/WaypointConnectionsEditorsVBoxContainer" to="." method="_on_waypoint_connections_editors_v_box_container_update_connection_feature"]
[connection signal="pressed" from="InformationPanel/ScrollContainer/TextEditVBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="InformationPanel/ScrollContainer/TextEditVBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="InformationPanel/ScrollContainer/TextEditVBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="DeletionConfirmationPanel/Panel/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="DeletionConfirmationPanel/Panel/VBoxContainer/HBoxContainer/DeleteCancelButton" to="." method="_on_delete_cancel_button_pressed"]
[connection signal="pressed" from="AddStructurePanel/Panel/VBoxContainer/BuildingButton" to="." method="_on_building_button_pressed"]
[connection signal="pressed" from="AddStructurePanel/Panel/VBoxContainer/RoomButton" to="." method="_on_room_button_pressed"]
[connection signal="pressed" from="AddStructurePanel/Panel/VBoxContainer/WaypointButton" to="." method="_on_waypoint_button_pressed"]
[connection signal="pressed" from="AddStructurePanel/Panel/VBoxContainer/AddStructureCancelButton" to="." method="_on_add_structure_cancel_button_pressed"]
[connection signal="pressed" from="InputMessagePanel/Panel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="button_down" from="LoginPanel/LoginButton" to="." method="_on_login_button_button_down"]
[connection signal="button_down" from="LoginPanel/CancelButton" to="." method="_on_cancel_button_button_down"]
